--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -1,20 +1,20 @@
 [ejs.landing]
-updateAvailableTooltip = "Update Available"
-usernamePlaceholder = "Username"
-usernameEditButton = "Edit"
-settingsTooltip = "Settings"
-serverStatus = "SERVER"
-serverStatusPlaceholder = "OFFLINE"
+updateAvailableTooltip = "mise a jour impossible "
+usernamePlaceholder = "pseudo"
+usernameEditButton = "modifier"
+settingsTooltip = "parametre"
+serverStatus = "SERVEUR"
+serverStatusPlaceholder = "hors ligne"
 mojangStatus = "MOJANG STATUS"
 mojangStatusTooltipTitle = "Services"
 mojangStatusNETitle = "Non&nbsp;Essential"
 newsButton = "NEWS"
-launchButton = "PLAY"
-launchButtonPlaceholder = "&#8226; No Server Selected"
-launchDetails = "Please wait.."
+launchButton = "JOUER"
+launchButtonPlaceholder = "&#8226; Aucun Serveur Selectionner"
+launchDetails = "Attendez s'il vous plait"
 newsNavigationStatus = "{currentPage} of {totalPages}"
 newsErrorLoadSpan = "Checking for News.."
-newsErrorFailedSpan = "Failed to Load News"
+newsErrorFailedSpan = "impossible de charger les news"
 newsErrorRetryButton = "Try Again"
 newsErrorNoneSpan = "No News"
 
