--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -15,8 +15,8 @@ launchDetails = "Attendez s'il vous plait"
 newsNavigationStatus = "{currentPage} of {totalPages}"
 newsErrorLoadSpan = "Checking for News.."
 newsErrorFailedSpan = "impossible de charger les news"
-newsErrorRetryButton = "Try Again"
-newsErrorNoneSpan = "No News"
+newsErrorRetryButton = "rééssayer"
+newsErrorNoneSpan = "Pas de news"
 
 [ejs.login]
 loginCancelText = "Cancel"
@@ -36,7 +36,7 @@ loginPasswordDisclaimer2 = "{appName} is not affiliated with Mojang AB."
 
 [ejs.loginOptions]
 loginOptionsTitle = "Login Options"
-loginWithMicrosoft = "Login with Microsoft"
+loginWithMicrosoft = "Se connecter avec microsoft"
 loginWithMojang = "Login with Mojang"
 cancelButton = "Cancel"
 
@@ -49,8 +49,8 @@ accountSelectConfirm = "Select"
 accountSelectCancel = "Cancel"
 
 [ejs.settings]
-navHeaderText = "Settings"
-navAccount = "Account"
+navHeaderText = "Parametre"
+navAccount = "Compte"
 navMinecraft = "Minecraft"
 navMods = "Mods"
 navJava = "Java"
@@ -58,12 +58,12 @@ navLauncher = "Launcher"
 navAbout = "About"
 navUpdates = "Updates"
 navDone = "Done"
-tabAccountHeaderText = "Account Settings"
+tabAccountHeaderText = "parametre du compte"
 tabAccountHeaderDesc = "Add new accounts or manage existing ones."
 microsoftAccount = "Microsoft"
 addMicrosoftAccount = "+ Add Microsoft Account"
 mojangAccount = "Mojang"
-addMojangAccount = "+ Add Mojang Account"
+addMojangAccount = "+ ajouter un compte mojang (plus disponible)"
 minecraftTabHeaderText = "Minecraft Settings"
 minecraftTabHeaderDesc = "Options related to game launch."
 gameResolutionTitle = "Game Resolution"
